# homeassistant-websocket-api-helper

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md  configuration.json.example
include/: curl_helper.h  home_assistant.h  https_socket.h  json.h  settings.h  util.h  version.h  web_socket.h  websocket.h
libcurl/: build.sh
src/: curl_helper.cpp  home_assistant.cpp  https_socket.cpp  main.cpp  settings.cpp  util.cpp  web_socket.cpp  websocket.cpp
test/src/: home_assistant_parsing_test.cpp  main.cpp  settings_test.cpp  util_test.cpp  websocket_test.cpp
